# esp32_wattimeter

./: .gitignore  .gitmodules  README.md  wattimeter.ipynb
.ipynb_checkpoints/: wattimeter-checkpoint.ipynb
ltspice_simulations/: instrumentation.asc  instrumentation.op.raw  instrumentation.raw
wattimeter/: CMakeLists.txt  sdkconfig
wattimeter/.cache/clangd/index/: UserSettings.h.96FE6BAA75392BF1.idx  acs712.c.E132F5B8EC67E7BE.idx  acs712.h.3A7FE9B43DD38E62.idx  adc.c.569E570936318AE6.idx  adc.h.8D4373E5E528C223.idx  app.c.D233E0AF7FBFA967.idx  app.h.69FFD1EE26E4FC22.idx  composite_video.h.72486CCC27AA32C3.idx  io.h.0F4CA7B39EC8339F.idx  io.h.132C417FF4915ED5.idx  lcd_common.h.5D11784E3271CB47.idx  lcd_il9163.h.30F235A3078CB8AE.idx  lcd_ili9341.h.38504D4EA175FE9C.idx  lcd_pcd8544.h.B5F72B8A1B5FEBC0.idx  nano_gfx_types.h.9DAF87A1E9F35357.idx  oled.c.8A7D8DB71942A26A.idx  oled.h.E2751CE349DCD9E9.idx  oled_sh1106.h.31B6590B4AEA0627.idx  oled_ssd1306.h.DC3FE48B9CF6EC26.idx  oled_ssd1325.h.DC775A40D70D3478.idx  oled_ssd1327.h.230FB3EB135A02A9.idx  oled_ssd1331.h.3B9545E878D1DF1A.idx  oled_ssd1351.h.3348889D21C9E9B2.idx  oled_template.h.56CC7729A97660FD.idx  ssd1306.c.8D98236396CB6F87.idx  ssd1306.h.7CEA8A75944915BC.idx  ssd1306_16bit.h.439007727C2D2796.idx  ssd1306_1bit.h.437B4EECCE8B6520.idx  ssd1306_8bit.h.9DB05BA614C89041.idx  ssd1306_fonts.h.6468BEFF82D09AC9.idx  (+4 more)
wattimeter/main/: CMakeLists.txt  wattimeter.c
wattimeter/main/application/: acs712.c  acs712.h  app.c  app.h  voltage.c  voltage.h
wattimeter/main/esp32_drivers/adc/: adc.c  adc.h
